# djiutil

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
djiutil/: __init__.py  __main__.py  convert.py  files.py
