[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = 'djiutil'
version = '1.0.0'
dependencies = [
    'srt ~= 3.5.3',
    'tabulate ~= 0.9.0',
]
requires-python = '>=3.11'

[project.scripts]
djiutil = 'djiutil.__main__:main'

[tool.setuptools.packages.find]
include = ['djiutil*']
namespaces = false
