[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = 'djiutil'
version = '1.0.1'
description = 'Manipulate files created by DJI drones'
license = {file = 'LICENSE'}
readme = 'README.md'
authors = [
    {name = 'William Dye'},
]
keywords = ['dji', 'dji air', 'dji drone', 'dji mavic', 'mavic', 'mavic pro']
dependencies = [
    'srt ~= 3.5.3',
    'tabulate ~= 0.9.0',
]
requires-python = '>=3.11'

[project.scripts]
djiutil = 'djiutil.__main__:main'

[project.urls]
Repository = 'https://github.com/will2dye4/djiutil.git'

[tool.setuptools.packages.find]
include = ['djiutil*']
namespaces = false
