[build-system]
requires = ['poetry-core']
build-backend = 'poetry.core.masonry.api'

[tool.poetry]
name = 'djiutil'
version = '1.0.3'
description = 'Manipulate files created by DJI drones'
license = 'MIT'
readme = 'README.md'
authors = ['William Dye']
keywords = ['dji', 'dji air', 'dji drone', 'dji mavic', 'mavic', 'mavic pro']
repository = 'https://github.com/will2dye4/djiutil.git'
packages = [{include = 'djiutil'}]

[tool.poetry.dependencies]
python = '^3.11'
srt = '^3.5.3'
tabulate = '^0.9.0'

[tool.poetry.scripts]
djiutil = 'djiutil.__main__:main'
